--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 # Created by .ignore support plugin (hsz.mobi)
-/EllaClient.iml
+/*.iml
 /.idea/
 /gradle/
 /.gradle/
 /build/
 /local.properties
-/ellasocket/build/
-/ellasocket/ellasocket.iml
+/*/build/
+/*/ellasocket.iml
 keystore.properties
 android_release.jks
 ellasocket-release.apk
